app/assets/stylesheets/pages/_show.scss
ol {
  float: left;
  margin-left: 10px;
}

@-ms-viewport {
  width: device-width;
}

.header {
  height: 40px;
}

.main-container{
	//height: calc(  100vw - 100px);
	//height: 100%
}

.back-btn {
  float: left;
  padding: 7px 11px 5px 40px;
  cursor: pointer;
}

.favorite {
  float: right;
  padding: 7px 40px 5px 7px;
  cursor: pointer;
}

.fa-arrow-left {
  color: #F6546A;
}

.fa-heart {
  color: lightgrey;

}

.icon-min-width {
  min-width: 70px;

}
.is-clicked {
  color: #F6546A !important;
}

.product-image {
  margin: auto;
  width: 400px;
  padding-bottom: 40px;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.product-image img {
  max-width: 100%;
}

.padding-left-top{
	padding-left: 20px;
	padding-top: 20px;
}
.description {

  background-color: #F6546A;
  color: white;
  padding-left: 20px;
  padding-top: 20px;

  h4 {
    font-weight: 100;
    font-size: 20px;
  }

  p {
    font-size: 16px;
    font-weight: 100;
    padding-right: 20px;

  }

}

.more-infos {
	padding-top: 20px;
	font-size: 16px;
	cursor: pointer;
	text-decoration: underline;
	p {
		font-size: 16px;
	}
}

.more-description {
	background-color: #F6546A;
	color: white;
	font-weight: 100;
	font-size: 12px;
  padding-top: 45px;
  padding-bottom: 15px;
  font-size: 20px;
  cursor: pointer;
  text-decoration: underline;
  p {
    font-size: 20px;
  }
}

.more-description {
  background-color: #F6546A;
  margin-top: -15px;
  color: white;
  font-weight: 100;
  font-size: 16px;
}

.display-none{
	display: none;
}
.title {
  font-weight: 100;
  text-decoration: underline;
  padding-bottom: 10px;

}

.more-description .info-details  {
  font-size: 16px;

}

.icon-left {
  padding-left: 20px;
}
.find {
  font-size: 16px;
  padding: 20px;
}

.details {
  display: flex;
}

.title-left {
  padding-bottom: 10px;
  padding-left: 20px;
  text-decoration: underline;
}

.title-right {
  padding-bottom: 10px;
  text-decoration: underline;

}

.info {
    padding-top: 11px;
    padding-right: 11px;
    padding-left: 12px;
}

.col-xs-6  h3 {
  font-size: 20px;
  font-weight: 500;
  margin-top: 17px;
}

@media only screen and (max-width: 399px) {
  .product-image {
    width: 150px;
  }
}

